[gd_scene load_steps=4 format=3 uid="uid://c4nhbncujuvdn"]

[ext_resource type="Script" path="res://Button_Default.gd" id="1_6eh0t"]
[ext_resource type="Texture2D" uid="uid://bkjtyvdanif5g" path="res://icon.svg" id="2_28aab"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_drht7"]
size = Vector2(34, 8)

[node name="Button_Default" type="StaticBody2D"]
position = Vector2(307, 349)
collision_layer = 8
collision_mask = 32
script = ExtResource("1_6eh0t")

[node name="Detector" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource("RectangleShape2D_drht7")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.265625, 0.0703124)
texture = ExtResource("2_28aab")

[connection signal="area_entered" from="Detector" to="." method="_on_detector_area_entered"]
[connection signal="area_exited" from="Detector" to="." method="_on_detector_area_exited"]
[connection signal="body_entered" from="Detector" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
